# sp-faucet

./: Cargo.toml  README.md  index.html
sp_faucet/: .conf  Cargo.toml
sp_faucet/src/: config.rs  daemon.rs  electrumclient.rs  faucet.rs  main.rs  message.rs  scan.rs  silentpayments.rs
sp_faucet/src/blindbit/: client.rs
src/: faucet.rs  main.rs  message.rs  scan.rs  silentpayments.rs
