[package]
name = "sp_faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitcoincore-rpc = { version = "0.18" }
electrum-client = { git = "https://github.com/cygnet3/rust-electrum-client", branch = "sp_tweaks" }
env_logger = "0.9"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
hex = { version =  "0.4.3", features = ["serde"] }
log = "0.4.20"
reqwest = "0.12.7"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.6.0"
sp_client = { git = "https://github.com/cygnet3/sp-client.git", branch = "master" }
tokio = { version = "1.0.0", features = ["io-util", "rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.21.0"
zeromq = "0.3.5"
